fixed footer and spacing

--- a/style.css
+++ b/style.css
@@ -124,22 +124,31 @@ img{
 
 #footer{
     padding: 10% 0 10%;
+    background-color: darkgray;
 }
 #footer h2{
     padding-bottom: 10px;
 }
 .social-links{
     padding: 10px;
-    color: darkgray
+    color: #000;
 }
 #footer-links{
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
+    align-items: center;
     padding-left: 15px;
     padding-right: 15px;
     width: 100%
     
 }
+.info{
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  padding: 50px;
+}
+
 
 /***** FOOTER STRIP *****/
 
@@ -232,7 +241,9 @@ padding-bottom: 15px;
 
 
 /***** CLIENTS *****/
-
+#clients{
+  padding-bottom: 30px;
+}
 
 .top-right{
   width: 100%;
